BETA ======= 1.8.1

- added: `config['disable-clear-temporary-directory'] = false` (after start)
- added: SchemaBuilderEntity.filter(custom, [model]);

- updated: `config['allow-performance']` is set to true
- updated: (IMPORTANT) F.map(url, filename/directory, [filter]) supports mapping directories
- updated: (IMPORTANT) arguments order SchemaBuilderEntity.setValidate(function(name, value, path, model, schema){})
- updated: (IMPORTANT) U.extend(target, source, [rewrite]); --> rewrite is by default: __true__
- updated: SchemaBuilderEntity.setPrepare(function(name, value, index, model){}) --> __model__ is new
- updated: SchemaBuilderEntity.define(name, value, required, [custom]) --> __custom__ is new

- removed: XSS check

- fixed: binary --translate (filenames)
- fixed: SchemaBuilderEntity prepare (problem with nullable Boolean)

- improved: code optimalization

======= 1.8.0

source-code: "tabs" instead of "spaces" 

- added: SchemaBuilderEntity->setPrepare(function(name, value, index))
- added: SchemaBuilderEntity–>setPrefix(prefix)
- added: SchemaBuilderEntity->setResource(resourcename)
- added: auto-trim strings in SchemaBuilderEntity
- added: Controller.route;
- added: ErrorBuilder is a global class
- added: F.on('upload-begin', function(req, file) {})
- added: F.on('upload-end', function(req, file) {})
- added: config['static-accepts']: woff2
- added: F.logger(filename, arg1, ...), controller.logger(...), @{logger(...)}
- added: (IMPORTANT) F.exists(req, res, callback(next, filename))
- added: callback: F.responseFile(), controller.file(), response.file()
- added: callback: F.responseImage(), controller.image(), response.image()
- added: callback: F.responseImageWithoutCache()
- added: callback: F.responseStream(), controller.stream(), response.stream()
- added: callback: F.responseStatic(), response.continue()
- added: Array.prototype.findIndex(cb, [value]) returns Number
- added: Array.prototype.toObject([name]) returns Object