@@ -3,6 +3,7 @@ BETA ======= 1.8.1
 - added: `config['disable-clear-temporary-directory'] = false` (after start)
 - added: SchemaBuilderEntity.filter(custom, [model]);
 
+- updated: F.route(url, ...), F.websocket(url, ...) --> URL can be function(url, req, [flags])
 - updated: `config['allow-performance']` is set to true
 - updated: (IMPORTANT) F.map(url, filename/directory, [filter]) supports mapping directories
 - updated: (IMPORTANT) arguments order SchemaBuilderEntity.setValidate(function(name, value, path, model, schema){})
